--- a/config.json
+++ b/config.json
@@ -2,29 +2,19 @@
   "cache_time": 7200,
   "api_site": {
     "hnzy": {
-      "api": "https://hnzyapi.com/api.php/provide/vod",
-      "name": "火鸟资源",
-      "is_adult": false
+      "api": "https://360zyzz.com/api.php/provide/vod",
+      "名称": "官方1",
+      "is_adult": 假的
     },
-    "lzzy": {
-      "api": "https://api.liangzizy.com/inc/apijson_vod.php",
-      "name": "量子资源",
-      "is_adult": false
+    "Lzzy": {
+      "api": "https://www.iqiyizy.com/api.php/provide/vod",
+      "名称": "官方2",
+      "is_adult": 假的
     },
     "ffzy": {
-      "api": "https://ffzyapi.com/api.php/provide/vod",
-      "name": "非凡资源",
-      "is_adult": false
-    },
-    "ykzy": {
-      "api": "https://api.yongjiuzy.cc/provide/vod",
-      "name": "永久资源",
-      "is_adult": false
-    },
-    "bdzy": {
-      "api": "https://api.1080zyku.com/inc/apijson_vod.php",
-      "name": "百度资源",
-      "is_adult": false
+      "api": "https://bfzyapi.com/api.php/provide/vod",
+      "名称": "官方3",
+      "is_adult": 假的
     }
   }
 }
