--- a/config.json
+++ b/config.json
@@ -1,19 +1,24 @@
 {
   "cache_time": 7200,
   "api_site": {
-    "hnzy": {
+    "360": {
       "api": "https://360zyzz.com/api.php/provide/vod",
       "name": "官方1",
       "is_adult": false
     },
-    "lzzy": {
+    "aqy": {
       "api": "https://www.iqiyizy.com/api.php/provide/vod",
       "name": "官方2",
       "is_adult": false
     },
-    "ffzy": {
+    "db": {
       "api": "https://caiji.dbzy5.com/api.php/provide/vod",
       "name": "官方3",
+      "is_adult": false
+    },
+    "gf": {
+      "api": "http://zy.xmm.hk/api.php/provide/vod",
+      "name": "官方4(推荐)",
       "is_adult": false
     }
   }
