--- a/config.json
+++ b/config.json
@@ -1,24 +1,14 @@
 {
   "cache_time": 7200,
   "api_site": {
-    "360": {
+    "dytt": {
       "api": "http://caiji.dyttzyapi.com/api.php/provide/vod/",
-      "name": "官方1无广告(推荐)",
+      "name": "官方1",
       "is_adult": false
     },
-    "aqy": {
-      "api": "https://www.iqiyizy.com/api.php/provide/vod",
-      "name": "官方2内置广告",
-      "is_adult": false
-    },
-    "db": {
-      "api": "https://caiji.dbzy5.com/api.php/provide/vod",
-      "name": "官方3内置广告",
-      "is_adult": false
-    },
-    "gf": {
-      "api": "https://360zyzz.com/api.php/provide/vod",
-      "name": "官方4内置广告",
+    "my": {
+      "api": "https://api.maoyanapi.top/api.php/provide/vod",
+      "name": "官方2",
       "is_adult": false
     }
   }
